--- a/_posts/2019-05-12-《为什么学生不喜欢上学》.md
+++ b/_posts/2019-05-12-《为什么学生不喜欢上学》.md
@@ -20,3 +20,14 @@ categories: [读书]
 脱离学生时代厌恶学习的情感之后，随之而来遇到的问题是如何更加有效率的学习。如何摆脱不喜欢学习并高效率的学习是我阅读本书的第一大理由，但它只解决了第一个困惑，为什么不喜欢学习。
 本书是认知心理类书籍，内容清晰、解释简单明确、众多实验数据令人信服。
 
+书中率先抛出一个概念：**大脑不是用来思考的，它真正的作用在于使你避免思考**，但人类生来具有好奇心，喜欢通过解决一些问题而带来愉悦感的思考。人们彼此之前体现出的差异便来自于思考的成功与否。
+而思考取决于四个方面：
+
+    1. 环境中的信息；
+    2. 长期记忆中的事实；
+    3. 长期记忆中的步骤；
+    4. 工作记忆中的空间大小。
+
+书中这张图解释了人在思考时大脑的工作流程：
+
+![记忆流程图](http://)
